Requisição de quiz realizada

--- a/public/dashboard/quiz.html
+++ b/public/dashboard/quiz.html
@@ -76,20 +76,20 @@
                     <h2 class="marginQuiz">Questão 1</h2>
                     <span>Nome popular para fakie 360º de back:</span>
                     <div class="containerResposta">
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="1">
+                        <label for="option1">
+                            <input type="radio" name="option1" class="radioCont" value="1">
                             Caballerial
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option1">
+                            <input type="radio" name="option1" class="radioCont" value="0">
                             Half-Cab 360
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option1">
+                            <input type="radio" name="option1" class="radioCont" value="0">
                             BigSpin
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option1">
+                            <input type="radio" name="option1" class="radioCont" value="0">
                             Half-Cab 360
                         </label>
                     </div>
@@ -99,20 +99,20 @@
                     <h2 class="marginQuiz">Questão 2</h2>
                     <span>Como se chama a manobra em que o skate gira 360° e o corpo 180°:</span>
                     <div class="containerResposta">
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option2">
+                            <input type="radio" name="option2" class="radioCont" value="0">
                             Gazelle
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option2">
+                            <input type="radio" name="option2" class="radioCont" value="0">
                             Caballerial
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option2">
+                            <input type="radio" name="option2" class="radioCont" value="0">
                             Double Hellflip
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="1">
+                        <label for="option2">
+                            <input type="radio" name="option2" class="radioCont" value="1">
                             BigSpin
                         </label>
                     </div>
@@ -121,20 +121,20 @@
                     <h2 class="marginQuiz">Questão 3</h2>
                     <span>Variação de manobra em que se tira um dos pés do skate enquanto o outro permanece:</span>
                     <div class="containerResposta">
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option3">
+                            <input type="radio" name="option3" class="radioCont" value="0">
                             Varial flip
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option3">
+                            <input type="radio" name="option3" class="radioCont" value="0">
                             Cave Ollie
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="1">
+                        <label for="option3">
+                            <input type="radio" name="option3" class="radioCont" value="1">
                             No Comply
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option3">
+                            <input type="radio" name="option3" class="radioCont" value="0">
                             Madonna
                         </label>
                     </div>
@@ -144,20 +144,20 @@
                     <h2 class="marginQuiz">Questão 4</h2>
                     <span>Combinação de varial com hellflip:</span>
                     <div class="containerResposta">
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="1">
+                        <label for="option4">
+                            <input type="radio" name="option4" class="radioCont" value="1">
                             Inward Hellflip
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option4">
+                            <input type="radio" name="option4" class="radioCont" value="0">
                             Varial Hellflip
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option4">
+                            <input type="radio" name="option4" class="radioCont" value="0">
                             Double Hellflip
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option4">
+                            <input type="radio" name="option4" class="radioCont" value="0">
                             Big Hellflip
                         </label>
                     </div>
@@ -167,20 +167,20 @@
                     <h2 class="marginQuiz">Questão 5</h2>
                     <span>Manobra em que o skate gira 540° e o corpo 360°:</span>
                     <div class="containerResposta">
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option5">
+                            <input type="radio" name="option5" class="radioCont" value="0">
                             Bigger BigSpin
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option5">
+                            <input type="radio" name="option5" class="radioCont" value="0">
                             Double HalfCab
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="1">
+                        <label for="option5">
+                            <input type="radio" name="option5" class="radioCont" value="1">
                             Gazelle
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option5">
+                            <input type="radio" name="option5" class="radioCont" value="0">
                             Double BigSpin
                         </label>
                     </div>
@@ -190,20 +190,20 @@
                     <h2 class="marginQuiz">Questão 6</h2>
                     <span>Qual o nome da manobra em que se realiza um tail de from na rampa segurando o nose com a mão de trás e tirando a perna da frente:</span>
                     <div class="containerResposta">
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option6">
+                            <input type="radio" name="option6" class="radioCont" value="0">
                             Steal Fish
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="1">
+                        <label for="option6">
+                            <input type="radio" name="option6" class="radioCont" value="1">
                             Madonna
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option6">
+                            <input type="radio" name="option6" class="radioCont" value="0">
                             OllieUp Grind
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option6">
+                            <input type="radio" name="option6" class="radioCont" value="0">
                             Boneless
                         </label>
                     </div>
@@ -213,20 +213,20 @@
                     <h2 class="marginQuiz">Questão 7</h2>
                     <span>Qual o nome da base em que o pé esquerdo vai na frente (nose):</span>
                     <div class="containerResposta">
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="1">
+                        <label for="option7">
+                            <input type="radio" name="option7" class="radioCont" value="1">
                             Regular
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option7">
+                            <input type="radio" name="option7" class="radioCont" value="0">
                             Goffy
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option7">
+                            <input type="radio" name="option7" class="radioCont" value="0">
                             Padding
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option7">
+                            <input type="radio" name="option7" class="radioCont" value="0">
                             Switch
                         </label>
                     </div>
@@ -236,20 +236,20 @@
                     <h2 class="marginQuiz">Questão 8</h2>
                     <span>Qual a marca de truck referencia no skate:</span>
                     <div class="containerResposta">
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option8">
+                            <input type="radio" name="option8" class="radioCont" value="0">
                             Jessup
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option8">
+                            <input type="radio" name="option8" class="radioCont" value="0">
                             Thunder
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="1">
+                        <label for="option8">
+                            <input type="radio" name="option8" class="radioCont" value="1">
                             Independent
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option8">
+                            <input type="radio" name="option8" class="radioCont" value="0">
                             Stronger
                         </label>
                     </div>
@@ -259,20 +259,20 @@
                     <h2 class="marginQuiz">Questão 9</h2>
                     <span>Nome popular da manobra varial double flip:</span>
                     <div class="containerResposta">
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option9">
+                            <input type="radio" name="option9" class="radioCont" value="0">
                             Super Varialflip
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="1">
+                        <label for="option9">
+                            <input type="radio" name="option9" class="radioCont" value="1">
                            Nigthmare flip
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option9">
+                            <input type="radio" name="option9" class="radioCont" value="0">
                             Inward flip
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option9">
+                            <input type="radio" name="option9" class="radioCont" value="0">
                             BigSpin flip
                         </label>
                     </div>
@@ -282,20 +282,20 @@
                     <h2 class="marginQuiz">Questão 10</h2>
                     <span>Nome da manobra em que se gira um 360° dolphin flip</span>
                     <div class="containerResposta">
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option10">
+                            <input type="radio" name="option10" class="radioCont" value="0">
                             Bigger DolphinFlip
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option10">
+                            <input type="radio" name="option10" class="radioCont" value="0">
                             Double DolphinFlip
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="0">
+                        <label for="option10">
+                            <input type="radio" name="option10" class="radioCont" value="0">
                             Nollie Gazelle flip
                         </label>
-                        <label for="option">
-                            <input type="radio" name="option" class="radioCont" value="1">
+                        <label for="option10">
+                            <input type="radio" name="option10" class="radioCont" value="1">
                             Dragon flip
                         </label>
                     </div>
@@ -304,6 +304,7 @@
 
                 <div class="sendQuiz">
                     <button onclick="sendResponse()">Enviar resposta</button>
+                    <span id="placar">Sua pontuação: </span>
                 </div>
             </div>
 
@@ -317,33 +318,37 @@
 
 <script>
     function sendResponse(){
-        var pontuacao = document.querySelectorAll('.radioCont');
-        var total = 0;
+        let pontuacao = document.querySelectorAll('.radioCont');
+        let displayPlacar = placar;
+        let total = 0;
 
         for (let i = 0; i < pontuacao.length; i++) {
-            if(pontuacao.cheked){
-                total += Number(pontuacao.value)
+            if(pontuacao[i].checked){
+                total += Number(pontuacao[i].value)
             }
         }
 
+        displayPlacar.innerHTML = `Sua pontuação: `;
+        displayPlacar.innerHTML += `${total}/10`;
         alert(`total: ${total}`)
+
         
         
-        // fetch('/quiz/cadastrar', {
-        //     method: 'POST',
-        //     headers: {
-        //         'Content-Type': 'application/json'
-        //     },
-        //     body: JSON.stringify({
-        //         idUserServer: sessionStorage.ID_USUARIO,
-        //         pontuacaoServer: pontuacao
-        //     })
-        // }).then(response => {
-        //     if(response.status == 200){
-        //         alert(`Pontuação pública pelo usuário: ${sessionStorage.ID_USUARIO}\n Pontuação: ${pontuacao}`)
-        //     }
-        // }).catch(response =>{
-        //     alert(response.erro)
-        // });
+        fetch('/quiz/cadastrar', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({
+                idUserServer: sessionStorage.ID_USUARIO,
+                pontuacaoServer: total
+            })
+        }).then(response => {
+            if(response.status == 200){
+                alert(`Pontuação pública pelo usuário: ${sessionStorage.ID_USUARIO}\n Pontuação: ${total}`)
+            }
+        }).catch(response =>{
+            alert(response.erro)
+        });
     }
 </script>
