Estilização de dash, adicionando modelo lógico e conexão remota com VM

--- a/public/dashboard/cards.html
+++ b/public/dashboard/cards.html
@@ -61,35 +61,6 @@
         </div>
 
         <div class="dash">
-            <div id="alerta">
-            </div>
-            <div class="area-parametros-alerta">
-                <p class="titulo-legenda">
-                    Legenda - Parâmetros para Alertas
-                </p>
-                <div class="parametros-alerta">
-                    <div class="item-regua perigo-frio">
-                        <p>Perigo</p>
-                        <p>&lt;=5°C</p>
-                    </div>
-                    <div class="item-regua alerta-frio">
-                        <p>Alerta</p>
-                        <p>&lt;=10°C</p>
-                    </div>
-                    <div class="item-regua ideal">
-                        <p>Ideal</p>
-                        <p>20°C</p>
-                    </div>
-                    <div class="item-regua alerta-quente">
-                        <p>Alerta</p>
-                        <p>&gt;=22°C</p>
-                    </div>
-                    <div class="item-regua perigo-quente">
-                        <p>Perigo</p>
-                        <p>&gt;=23°C</p>
-                    </div>
-                </div>
-            </div>
 
             <div class="cards" id="cardAquarios">
 
@@ -125,6 +96,7 @@
     document.addEventListener("DOMContentLoaded", ()=>{
         var cardUser = document.querySelector('.cardUser');
         cardUser.style.display = 'none';
+        setTimeout(exibUser(), 2500);
     });
 
     function exibUser() {
