--- a/public/dashboard/quiz.html
+++ b/public/dashboard/quiz.html
@@ -45,8 +45,9 @@
             </div>
 
             <div class="btn-nav-white">
-
-                <h3>Histórico</h3>
+                <a href="./dashboard.html">
+                    <h3>Histórico</h3>
+                </a>
 
             </div>
 
